# opus

./: .gitignore  LICENSE  Procfile  README.md  data.json  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  tokens.py  urls.py  views.py
accounts/avatars/: database.py  get_avataaars.py
accounts/management/commands/: activate.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: acc_active_email.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_subject.txt
api/: serializers.py  urls.py  views.py
appsite/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
appsite/avatars/: get_avataaars.py
appsite/migrations/: 0001_initial.py  0002_alter_profile_picture.py  0002_alter_task_due_date.py  0002_alter_task_original_id.py  0002_auto_20211206_2034.py  0002_auto_20211207_1939.py  0002_auto_20211209_0856.py  0002_auto_20211211_0159.py  0003_alter_job_type.py  0003_alter_profile_picture.py  0003_auto_20211209_0916.py  0004_alter_profile_picture.py  0004_profile.py  0005_alter_job_type.py  0005_alter_profile_picture.py  0006_alter_profile_picture.py  0006_auto_20211209_0455.py
appsite/templatetags/: advanced_with.py
opus/: asgi.py  settings.py  urls.py  wsgi.py
opus/settings/: .env.example  __init__.py  common.py  dev.py  prod.py
static/css/: style.css
templates/: base.html
templates/components/: list_card.html  list_card_invite.html  task_table.html  user_card.html  user_picture.html
(+24 files in other folders)
